<resources>
    <string name="app_name">AndroidRK1</string>


    <!--    Валюты -->
    <string name="currency_usd">USD</string>
    <string name="currency_eur">EUR</string>
    <string name="currency_rub">RUB</string>

    <!--    Криптовалюты -->
    <string name="crypto_btc">BTC</string>
    <string name="crypto_doge">DOGE</string>
    <string name="crypto_ltc">LTC</string>
    <string name="crypto_eth">ETH</string>

    <string name="crypto_btc_key">Bitcoin</string>
    <string name="crypto_doge_key">DogeCoin</string>
    <string name="crypto_ltc_key">Litecoin</string>
    <string name="crypto_eth_key">Ethereum</string>

    <!--    Menu-->
    <string name="settings_menu_item">SETTINGS</string>

    <!--    Preferences-->
    <string name="currency_preference_key">currency_preference</string>
    <string name="currency_preference_title">Exchange currency</string>
    <string name="days_preference_key">days_preference</string>
    <string name="days_preference_title">Days visible</string>
    <string name="days_preference_default_value">10</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme_preference_key">theme_preference</string>
    <string name="theme">Theme</string>

    <!--    Other-->
    <string name="choose_crypto_type">Choose crypto type</string>
    <string name="ok">OK</string>

    <!--    Link-->
    <string name="link_title">Api documentation</string>
    <string name="link_value">https://docs.coinapi.io/#md-docs</string>

    <!--    Fragment titles-->
    <string name="list_fragment_title">Exchange days</string>
    <string name="extra_info_fragment_title">Day extra info</string>

    <!--    Extra info-->
    <string name="extra_info_max_title">Highest price per day:</string>
    <string name="extra_info_min_title">Lowest price per day:</string>
    <string name="extra_info_trades_title">Trades count per day:</string>
</resources>