<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <SwitchPreference
            android:title="@string/theme"
            app:key="@string/theme_preference_key"
            app:summaryOff="@string/light_theme"
            app:summaryOn="@string/dark_theme" />

    </PreferenceCategory>

    <PreferenceCategory>

        <ListPreference
            app:defaultValue="@string/currency_usd"
            app:entries="@array/currency_names"
            app:entryValues="@array/currency_values"
            app:key="@string/currency_preference_key"
            app:title="@string/currency_preference_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory>

        <EditTextPreference
            app:defaultValue="10"
            app:key="@string/days_preference_key"
            app:singleLine="true"
            app:title="@string/days_preference_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>