<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/crypto_type_radio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_m">

    <RadioButton
        android:id="@+id/btc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/crypto_btc" />

    <RadioButton
        android:id="@+id/eth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/crypto_eth" />

    <RadioButton
        android:id="@+id/doge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/crypto_doge" />

    <RadioButton
        android:id="@+id/ltc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:text="@string/crypto_ltc" />

</RadioGroup>
